schema/testdata/errors/attribute_embed.keel
model Author {
    fields {
        firstName Text
        surname Text @unique
        books Book[]
    }
}

model Review {
    fields {
        content Text
        book Book
    }

    actions {
        get getReview(id) {
            @embed(book)
        }
    }
}

model Book {
    fields {
        title Text
        author Author
        reviews Review[]
        code Code?
    }

    actions {
        list listBooks() {
            @embed(code)
            //expect-error:20:21:AttributeArgumentError:The @embed attribute can only be used with valid model fields
            @embed(1)
            //expect-error:20:28:AttributeArgumentError:@embed argument is not correctly formatted
            @embed(code = 1)
            //expect-error:29:30:AttributeArgumentError:The @embed attribute can only be used with valid model fields
            @embed(reviews, 2)
        }
        get getBook(id) {
            //expect-error:20:25:AttributeArgumentError:title is not a model field
            @embed(title)
            //expect-error:20:32:AttributeArgumentError:title is not a field in the Author model
            @embed(author.title)
            @embed(author)
            //expect-error:20:26:AttributeArgumentError:@embed argument 'author' already defined within this action
            @embed(author)
        }
        get getLiteBook(id)
    }
}

model Code {
    fields {
        code Text
        book Book @unique
    }
}
